<resources>
    <string name="app_name">Tap Grey Box</string>

    <!--    /////////////////// ad ids //////////////////////////-->
    <string name="ADMOB_APP_ID" translatable="false">ca-app-pub-4943607897768964~8206082520</string>
    <string name="BANNER_AD_ID" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="INTERSTITIAL_AD_ID" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="REWARDED_VIDEO_AD_ID" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
    <string name="NATIVE_ADVANCED_AD_ID" translatable="false">ca-app-pub-3940256099942544/1044960115</string>

    <string name="gameplay_title_score">Score :</string>
    <string name="play">PLAY</string>
    <string name="gameover">GAMEOVER</string>
    <string name="home">HOME</string>
    <string name="replay">REPLAY</string>
    <string name="current_score">Current Score</string>
    <string name="best_score">Best Score</string>
    <string name="do_you_want_to_save_this_game">Do you want to save this game?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="do_you_want_to_resume_saved_game">Do you want to resume saved game?</string>
    <string name="continue_text">CONTINUE</string>
    <string name="new_game">NEW GAME</string>
    <string name="feedback_mail_subject">Issue in the game</string>
    <string name="feedback">Feedback</string>
    <string name="network_type">Network Type</string>
    <string name="device_info">Device Info</string>
    <string name="score">Score</string>
    <string name="mail_us">Mail Us</string>
    <string name="color_code1" translatable="false">#FF5722</string>
    <string name="color_code2" translatable="false">#2196F3</string>
    <string name="color_code3" translatable="false">#FFC107</string>
    <string name="color_code4" translatable="false">#4CAF50</string>
    <string name="color_code5" translatable="false">#7E7D7C</string>
    <string name="show_rc_values">Show RC Values</string>
    <string name="default_notification_channel_id" translatable="false">default_notification_channel_id</string>
    <string name="fcm_message" translatable="false">FCM Message</string>
    <string name="choose_language">Choose Language</string>
    <string name="local_notification_message">Hey! Are you ready to play tap gray box game?</string>
    <string name="english" translatable="false">English</string>
    <string name="hindi" translatable="false">हिन्दी</string>
    <string name="urdu" translatable="false">اردو</string>
    <string name="resume">Resume</string>
    <string name="continue_where_you_left">CONTINUE WHERE YOU LEFT</string>
    <string name="ad_loaded">Ad loaded</string>
    <string name="ad_not_available">Ad not available. Try later!</string>
    <string name="loading_ad">Loading Ad</string>
    <string name="ad" translatable="false">Ad</string>

</resources>
