<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/grey"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/gameover"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_24" />

    <TextView
        android:id="@+id/currentScoreView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_standard"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_18" />

    <TextView
        android:id="@+id/bestScoreView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_standard"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_standard"
        android:gravity="center"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_large_horizontal"
            android:text="@string/home"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/replayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large_horizontal"
            android:text="@string/replay"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>